test/vm/errors/immutable_assign.ach
// Expected error: reassigning an immutable let binding
let x = 42
x = 99
